# INTERACTIVE_BIRTHDAY_CARD

./: README.md  config.py  controller.py  database.sqlite  main.py  models.py  pyproject.toml  routes.py
templates/: index.html  wishes.html
templates/static/: app.js  styles.css  wishes.js
