[tool.poetry]
name = "interactive-birthday-card"
version = "0.1.0"
description = "An interactive birthday card"
authors = ["Cozyamy <cozyamy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
